--- a/contact.html
+++ b/contact.html
@@ -184,5 +184,16 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+
+     <!-- end of line -->
+
+    <script>
+      function toggleMenu() {
+        menuList.classList.toggle("active");
+      }
+      function toggleMenu() {
+        menuList.classList.toggle("active");
+      }
+    </script>
   </body>
 </html>
