--- a/faqs.html
+++ b/faqs.html
@@ -8,7 +8,15 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/mq.css" />
      <title>NACS US</title>
+        <style>
+            #tac span {
+            font-weight: bold;
+            font-family: var(--first-font);
+            font-size: 25px;
+            color: #000000;
+          }
 
+        </style>
     <!-- Boostrap 5 -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -106,7 +114,61 @@
                   <span class="sub-title">Northern American Consumable Solutions (NACS) collaborates with reputable suppliers to offer a comprehensive range of products, including electrical components, packaging materials, HVAC systems, engineering tools, and industrial supplies. By leveraging these partnerships, NACS ensures the delivery of quality materials at competitive prices, meeting the diverse needs of its customers.</span>
                 </p>
               </div>
-              <div class="tab-pane fade" id="tac" role="tabpanel" aria-labelledby="tac-tab">...</div>
+              <div class="tab-pane fade" id="tac" role="tabpanel" aria-labelledby="tac-tab">
+                
+                <p class="text-start .tac">
+                 <span class="title"> 
+                 Terms and Conditions <br> <br>
+                  1. Product Information </span> <br>
+                    North America Consumable Solutions (NACS) is committed to providing accurate and up-to-date information regarding its products, including pricing, availability, and specifications. While we strive for accuracy, NACS reserves the right to correct any errors or omissions at any time without prior notice.
+                  <br>
+                  <br>
+
+                   <span class="title"> 
+                  2. Ordering and Payment </span> <br>
+                    Customers may place orders through the NACS website, warehouse, or by contacting our sales representatives. Payment may be made through various channels, including online banking and payment gateways such as GCash or bank transfers. NACS reserves the right to cancel or decline any order at its sole discretion.
+                    <br>
+                    <br>
+
+                    <span class="title"> 
+                  3. Delivery </span> <br>
+                    NACS will deliver products in a timely and efficient manner. Delivery times and costs may vary depending on the customer’s location and product availability. NACS is not responsible for delays or damages caused by third-party delivery services.
+                    <br>
+                    <br>
+
+                    <span class="title"> 
+                  4. Returns and Refunds </span> <br>
+                    Customers may request a return or refund within the specified return period, provided that the product is in its original condition and packaging. All return and refund requests are subject to review, and NACS reserves the right to approve or deny such requests at its discretion. Approved refunds will be issued through the original payment method used for the purchase.
+                    <br>
+                    <br>
+
+                    <span class="title"> 
+                  5. Support Services </span> <br>
+                    NACS provides support services for its products as outlined in the respective product documentation. These services do not cover damage resulting from misuse, abuse, or unauthorized modifications. Additional charges may apply for out-of-warranty or non-standard support services.
+                    <br>
+                    <br>
+
+                     <span class="title"> 
+                  6. Privacy and Data Protection </span> <br>
+                    NACS is committed to protecting the privacy and security of customer information in accordance with its Privacy Policy. The use of cookies and similar tracking technologies may be employed to enhance user experience and analyze website traffic.
+                    <br>
+                    <br>
+
+                     <span class="title"> 
+                  7. Intellectual Property </span> <br>
+                    NACS owns or has obtained licenses for all intellectual property associated with its products and services, including but not limited to trademarks, copyrights, and patents. Customers are prohibited from using NACS or Buildhub PH intellectual property without prior written authorization.
+                    <br>
+                    <br>
+
+                     <span class="title"> 
+                  8. Agreement </span> <br>
+                    This agreement between NACS and its customers is governed by the laws of the United States. Any disputes arising from this agreement shall be resolved through arbitration or mediation in accordance with the rules of U.S. Dispute Resolution procedures
+                    <br>
+                    <br>
+            
+                </p>
+              </div>
+
               <div class="tab-pane fade" id="oad" role="tabpanel" aria-labelledby="oad-tab">
                 <p class="text-start .about">
                   What are the products offered by NACS <br>
