--- a/faqs.html
+++ b/faqs.html
@@ -177,7 +177,17 @@
 
               </div>
                <div class="tab-pane fade" id="pac" role="tabpanel" aria-labelledby="pac-tab">
-                
+                    <p class="text-start .about">
+                     <span class="sub-title">What are the modes of payments accepted? </span>
+                        <br><br>
+                          We accept the following: <br>
+                          Pre-approved credit line through BuildCredit <br>
+                          Credit card payment using Visa or Master Card <br>
+                          Gcash, Dragonpay, Bancnet, Security Bank, BPI Online, PNB, BDO <br>
+                          Over the counter payments such as 7-11, ecpay, cliqq, Mlhuillier, Cebuana Lhuillier, Posible, Expresspay and truemoney. <br>
+                          Cash on Delivery (COD) <br>
+                       
+                    </p>
                </div>
             </div>
         </div>
