--- a/shop.html
+++ b/shop.html
@@ -22,6 +22,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
+
+        <style>
+         
+
+        </style>
+
   </head>
   <body>
     <!-- header  -->
@@ -115,7 +121,45 @@
                           of Measurement: Metric Dial Indicator Type: Plunger
                         </p>
                         <div class="mt-auto">
-                          <a href="#" class="btn btn-primary w-100">View Product</a>
+                          <button type="button" class="btn btn-primary mt-button" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                           View Product
+                          </button>
+
+                          <!-- Modal -->
+                              <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog modal-dialog-centered modal-lg">
+                                  <div class="modal-content">
+                                    <div class="modal-header">
+                                      <h5 class="modal-title" id="exampleModalLabel">Product View</h5>
+                                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                     <div class="row">
+                                      <div class="col">
+                                        <img src="./img/products/1.jpg" alt="" class="img-fluid">
+                                      </div>
+                                      <div class="col">
+                                        <h5 class="card-title text-center">
+                                          Economy Dial Plunger Indicator
+                                        </h5>
+                                        <p class="card-text">
+                                          0 mm to 10 mm Measuring Range MC Master No.: 20715A83 System
+                                          of Measurement: Metric Dial Indicator Type: Plunger
+                                        </p>
+                                      </div>
+                                      <button type="button" class="btn btn-primary mt-button" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                       Contact Sales
+                                      </button>
+                                     </div>
+                                    </div>
+                                    <div class="modal-footer">
+                                      <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button> -->
+                                      <button type="button" class="btn btn-primary">Contact Sales</button>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+
                         </div>
                       </div>
                     </div>
