--- a/contact.html
+++ b/contact.html
@@ -1,96 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="./img/nacs-logo.png" />
-    <link rel="stylesheet" href="./css/header.css" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/mq.css" />
-    <style>
-    </style>
 
-    <title>NACS US</title>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'; object-src 'none'">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/png" href="./img/nacs-logo.png" />
+  <link rel="stylesheet" href="./css/header.css" />
+  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="./css/mq.css" />
+  <style>
+  </style>
 
-    <!-- Boostrap 5 -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
-    <!-- Font Awesome 6 CDN -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-    />
+  <title>NACS US</title>
 
-    <!--  -->
-    <style>
-     
-    </style>
-  </head>
-  <body>
-    <!-- header  -->
-    <container>
-      <div class="topbar">
-        <div class="row" id="hero">
-          <div class="col-3" id="col-hero">
-            <img src="./img/fb.png" alt="icon" />
-            <img src="./img/shopif.png" alt="icon" />
+  <!-- Boostrap 5 -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+  <!-- Font Awesome 6 CDN -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
+  <!--  -->
+  <style>
+
+  </style>
+</head>
+
+<body>
+  <!-- header  -->
+  <container>
+    <div class="topbar">
+      <div class="row" id="hero">
+        <div class="col-3" id="col-hero">
+          <img src="./img/fb.png" alt="icon" />
+          <img src="./img/shopif.png" alt="icon" />
+        </div>
+        <div class="col-9" id="col-heroes">
+          <div class="icon-text">
+            <img src="./img/envelope.png" alt="icon" />
+            <span class="span">nacs-us@gmail.com</span>
           </div>
-          <div class="col-9" id="col-heroes">
-            <div class="icon-text">
-              <img src="./img/envelope.png" alt="icon" />
-             <span class="span">nacs-us@gmail.com</span>
-            </div>
-            <div class="icon-text">
-              <img src="./img/phone-call.png" alt="icon" />
-              <span class="span">+63 961 123 2546</span>
-            </div>
-            <div class="icon-text">
-              <img src="./img/time.png" alt="icon" />
-              <span class="span">Mon - Sat: 9:00am to 6:00pm</span>
-            </div>
+          <div class="icon-text">
+            <img src="./img/phone-call.png" alt="icon" />
+            <span class="span">+63 961 123 2546</span>
+          </div>
+          <div class="icon-text">
+            <img src="./img/time.png" alt="icon" />
+            <span class="span">Mon - Sat: 9:00am to 6:00pm</span>
           </div>
         </div>
       </div>
-    </container>
-    <!-- nav bar -->
-    <nav>
-      <div class="logo">
-        <img src="./img/nacs-logo.png" alt="" />
-      </div>
-      <ul id="menuList">
-        <li class="close-btn">
-          <i class="fa-solid fa-xmark" onclick="toggleMenu()"></i>
-        </li>
-        <li><a href="index.html">HOME</a></li>
-        <li><a href="./shop.html">SHOP</a></li>
-        <!-- <li><a href="">BLOGS</a></li> -->
-        <li><a href="./faqs.html">FAQS</a></li>
-        <li><a href="./contact.html">CONTACT US</a></li>
-      </ul>
-      <div class="menu-icon">
-        <i class="fa-solid fa-bars" onclick="toggleMenu()"></i>
-      </div>
-    </nav>
+    </div>
+  </container>
+  <!-- nav bar -->
+  <nav>
+    <div class="logo">
+      <img src="./img/nacs-logo.png" alt="" />
+    </div>
+    <ul id="menuList">
+      <li class="close-btn">
+        <i class="fa-solid fa-xmark" onclick="toggleMenu()"></i>
+      </li>
+      <li><a href="index.html">HOME</a></li>
+      <li><a href="./shop.html">SHOP</a></li>
+      <!-- <li><a href="">BLOGS</a></li> -->
+      <li><a href="./faqs.html">FAQS</a></li>
+      <li><a href="./contact.html">CONTACT US</a></li>
+    </ul>
+    <div class="menu-icon">
+      <i class="fa-solid fa-bars" onclick="toggleMenu()"></i>
+    </div>
+  </nav>
 
 
-<!-- contact-us content starts here -->
+  <!-- contact-us content starts here -->
 
-<div class="container-fluid">
+  <div class="container-fluid">
     <div class="contact_us">
-       <button type="button" class="btn btn-primary mt-5">Contact us</button>
-       <p class="text get mt-5">
+      <button type="button" class="btn btn-primary mt-5">Contact us</button>
+      <p class="text get mt-5">
         GET IN TOUCH
-       </p>
-       <span class="text-center">
+      </p>
+      <span class="text-center">
         Please use our contact form for all inquiries, or reach out to us directly using the contact details below. <br>
         You’re welcome to get in touch via email or phone.
-       </span>
+      </span>
 
-       <div class="row g-0 mt-5" id="row-info">
+      <div class="row g-0 mt-5" id="row-info">
         <div class="col">
           <i class="fa-solid fa-phone fa-3x mb-3"></i>
           <p class="text-center ">
@@ -98,29 +94,33 @@
             <span class="info">+63 961 123 2546</span>
           </p>
         </div>
-         <div class="col">
-           <i class="fa-solid fa-envelope fa-3x mb-3"></i>
-            <p class="text-center">
+        <div class="col">
+          <i class="fa-solid fa-envelope fa-3x mb-3"></i>
+          <p class="text-center">
             EMAIL ADDRESS <br>
             <span class="info">nacsindustrial@gmail.com</span>
           </p>
         </div>
-         <div class="col">
+        <div class="col">
           <i class="fa-solid fa-location-dot fa-3x mb-3"></i>
-           <p class="text-center">
+          <p class="text-center">
             LOCATION <br>
             <span class="info">112 N.Plymouth Way <br>
-                          San Bernardino CA 92408</span>
+              San Bernardino CA 92408</span>
           </p>
         </div>
-       </div>
+      </div>
 
 
-       <!-- iframe google maps -->
-       <div class="iframe mt-5 mb-5">
-       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3305.5248603303467!2d-117.2870607!3d34.0560573!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dcac8a6be659a9%3A0x68b41b37b43b997f!2s112%20Plymouth%20Way%2C%20San%20Bernardino%2C%20CA%2092408%2C%20USA!5e0!3m2!1sen!2sph!4v1747988066336!5m2!1sen!2sph" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+      <!-- iframe google maps -->
+      <div class="iframe mt-5 mb-5">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3305.5248603303467!2d-117.2870607!3d34.0560573!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dcac8a6be659a9%3A0x68b41b37b43b997f!2s112%20Plymouth%20Way%2C%20San%20Bernardino%2C%20CA%2092408%2C%20USA!5e0!3m2!1sen!2sph!4v1747988066336!5m2!1sen!2sph"
+          width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
     </div>
-</div>
+  </div>
 
 
 
@@ -130,40 +130,44 @@
 
 
 
-    <!-- footer -->
-    <footer>
-      <div class="container">
-        <div class="row g-4 py-4 px-2 text-center text-md-start" id="footer-row">
-          <div class="col-12 col-md-4">
-            <div class="logo-footer mb-3 mb-md-0">
-              <img src="./img/nacs-logo.png" alt="footer-logo" />
-            </div>
+  <!-- footer -->
+  <footer>
+    <div class="container">
+      <div class="row g-4 py-4 px-2 text-center text-md-start" id="footer-row">
+        <div class="col-12 col-md-4">
+          <div class="logo-footer mb-3 mb-md-0">
+            <img src="./img/nacs-logo.png" alt="footer-logo" />
           </div>
-          <div class="col-12 col-md-4">
-            <div class="footer-details">
-              <p class="text-center">
-                <span class="span-title">Contact Info </span> <br>
-              </p>
-              <p class="text-center mt-2 d-block">
-                 112 N.Plymouth Way <br>
-                  San Bernardino CA 92408
-              </p>
-            </div>
+        </div>
+        <div class="col-12 col-md-4">
+          <div class="footer-details">
+            <p class="text-center">
+              <span class="span-title">Contact Info </span> <br>
+            </p>
+            <p class="text-center mt-2 d-block">
+              112 N.Plymouth Way <br>
+              San Bernardino CA 92408
+            </p>
           </div>
-          <div class="col-12 col-md-4">
-             <div class="footer-details text-align-end">
-              <div class="mb-3 responsive-align">
-                <span class="span-title">Website</span>
+        </div>
+        <div class="col-12 col-md-4">
+          <div class="footer-details text-align-end">
+            <div class="mb-3 responsive-align">
+              <span class="span-title">Website</span>
+            </div>
+            <div class="row mt-3">
+              <div class="col responsive-center">
+                <p><a href="./index.html" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Home</a>
+                </p>
+                <p><a href="./shop.html" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Shop</a>
+                </p>
+                <p><a href="./faqs.html" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">FAQS</a>
+                </p>
+                <p><a href="" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Blog</a></p>
+                <p><a href="./contact.html" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Contact
+                    us</a></p>
               </div>
-                  <div class="row mt-3">
-                    <div class="col responsive-center">
-                      <p><a href="./index.html" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Home</a></p>
-                      <p><a href="./shop.html" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Shop</a></p>
-                      <p><a href="./faqs.html" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">FAQS</a></p>
-                      <p><a href="" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Blog</a></p>
-                      <p><a href="./contact.html" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Contact us</a></p>
-                    </div>
-                  </div>
+            </div>
           </div>
         </div>
 
@@ -171,29 +175,26 @@
 
         <p class="text-muted mt-5">© Copyright 2024, nacsinternational.com</p>
       </div>
-    </footer>
+  </footer>
 
-    <!-- Font awesome -->
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/js/all.min.js"
-      crossorigin="anonymous"
-    ></script>
-    <!-- Bootstrap -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
+  <!-- Font awesome -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/js/all.min.js"
+    crossorigin="anonymous"></script>
+  <!-- Bootstrap -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
 
-     <!-- end of line -->
+  <!-- end of line -->
 
-    <script>
-      function toggleMenu() {
-        menuList.classList.toggle("active");
-      }
-      function toggleMenu() {
-        menuList.classList.toggle("active");
-      }
-    </script>
-  </body>
+  <script>
+    function toggleMenu() {
+      menuList.classList.toggle("active");
+    }
+    function toggleMenu() {
+      menuList.classList.toggle("active");
+    }
+  </script>
+</body>
+
 </html>
