--- a/shop.html
+++ b/shop.html
@@ -132,7 +132,7 @@
 
                       <!-- Modal -->
                       <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                        aria-hidden="true">
+                        aria-hidden="false">
                         <div class="modal-dialog modal-dialog-centered modal-lg">
                           <div class="modal-content">
                             <div class="modal-header">
@@ -202,7 +202,7 @@
 
                       <!-- Modal -->
                       <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel"
-                        aria-hidden="true">
+                        aria-hidden="false">
                         <div class="modal-dialog modal-dialog-centered modal-lg">
                           <div class="modal-content">
                             <div class="modal-header">
@@ -272,7 +272,7 @@
                       </button>
                       <!-- Modal -->
                       <div class="modal fade" id="exampleModal3" tabindex="-1" aria-labelledby="exampleModalLabel2"
-                        aria-hidden="true">
+                        aria-hidden="false">
                         <div class="modal-dialog modal-dialog-centered modal-lg">
                           <div class="modal-content">
                             <div class="modal-header">
@@ -344,7 +344,7 @@
                       </button>
                       <!-- Modal -->
                       <div class="modal fade" id="exampleModal17" tabindex="-1" aria-labelledby="exampleModalLabel17"
-                        aria-hidden="true">
+                        aria-hidden="false">
                         <div class="modal-dialog modal-dialog-centered modal-lg">
                           <div class="modal-content">
                             <div class="modal-header">
@@ -428,7 +428,7 @@
 
                     <!-- Modal -->
                     <div class="modal fade" id="exampleModal18" tabindex="-1" aria-labelledby="exampleModalLabel"
-                      aria-hidden="true">
+                      aria-hidden="false">
                       <div class="modal-dialog modal-dialog-centered modal-lg">
                         <div class="modal-content">
                           <div class="modal-header">
@@ -498,7 +498,7 @@
 
                     <!-- Modal -->
                     <div class="modal fade" id="exampleModal19" tabindex="-1" aria-labelledby="exampleModalLabel"
-                      aria-hidden="true">
+                      aria-hidden="false">
                       <div class="modal-dialog modal-dialog-centered modal-lg">
                         <div class="modal-content">
                           <div class="modal-header">
@@ -567,7 +567,7 @@
 
                     <!-- Modal -->
                     <div class="modal fade" id="exampleModal9" tabindex="-1" aria-labelledby="exampleModalLabel"
-                      aria-hidden="true">
+                      aria-hidden="false">
                       <div class="modal-dialog modal-dialog-centered modal-lg">
                         <div class="modal-content">
                           <div class="modal-header">
@@ -635,7 +635,7 @@
 
                     <!-- Modal -->
                     <div class="modal fade" id="exampleModal20" tabindex="-1" aria-labelledby="exampleModalLabel"
-                      aria-hidden="true">
+                      aria-hidden="false">
                       <div class="modal-dialog modal-dialog-centered modal-lg">
                         <div class="modal-content">
                           <div class="modal-header">
@@ -709,7 +709,7 @@
 
                     <!-- Modal -->
                     <div class="modal fade" id="exampleModal21" tabindex="-1" aria-labelledby="exampleModalLabel"
-                      aria-hidden="true">
+                      aria-hidden="false">
                       <div class="modal-dialog modal-dialog-centered modal-lg">
                         <div class="modal-content">
                           <div class="modal-header">
@@ -776,7 +776,7 @@
 
                     <!-- Modal -->
                     <div class="modal fade" id="exampleModal22" tabindex="-1" aria-labelledby="exampleModalLabel"
-                      aria-hidden="true">
+                      aria-hidden="false">
                       <div class="modal-dialog modal-dialog-centered modal-lg">
                         <div class="modal-content">
                           <div class="modal-header">
@@ -842,7 +842,7 @@
 
                     <!-- Modal -->
                     <div class="modal fade" id="exampleModal23" tabindex="-1" aria-labelledby="exampleModalLabel"
-                      aria-hidden="true">
+                      aria-hidden="false">
                       <div class="modal-dialog modal-dialog-centered modal-lg">
                         <div class="modal-content">
                           <div class="modal-header">
@@ -908,7 +908,7 @@
 
                     <!-- Modal -->
                     <div class="modal fade" id="exampleModal24" tabindex="-1" aria-labelledby="exampleModalLabel"
-                      aria-hidden="true">
+                      aria-hidden="false">
                       <div class="modal-dialog modal-dialog-centered modal-lg">
                         <div class="modal-content">
                           <div class="modal-header">
@@ -978,7 +978,7 @@
 
                     <!-- Modal -->
                     <div class="modal fade" id="exampleModal25" tabindex="-1" aria-labelledby="exampleModalLabel"
-                      aria-hidden="true">
+                      aria-hidden="false">
                       <div class="modal-dialog modal-dialog-centered modal-lg">
                         <div class="modal-content">
                           <div class="modal-header">
@@ -1045,7 +1045,7 @@
 
                     <!-- Modal -->
                     <div class="modal fade" id="exampleModal26" tabindex="-1" aria-labelledby="exampleModalLabel"
-                      aria-hidden="true">
+                      aria-hidden="false">
                       <div class="modal-dialog modal-dialog-centered modal-lg">
                         <div class="modal-content">
                           <div class="modal-header">
@@ -1110,7 +1110,7 @@
 
                     <!-- Modal -->
                     <div class="modal fade" id="exampleModal27" tabindex="-1" aria-labelledby="exampleModalLabel"
-                      aria-hidden="true">
+                      aria-hidden="false">
                       <div class="modal-dialog modal-dialog-centered modal-lg">
                         <div class="modal-content">
                           <div class="modal-header">
@@ -1175,7 +1175,7 @@
 
                     <!-- Modal -->
                     <div class="modal fade" id="exampleModal28" tabindex="-1" aria-labelledby="exampleModalLabel"
-                      aria-hidden="true">
+                      aria-hidden="false">
                       <div class="modal-dialog modal-dialog-centered modal-lg">
                         <div class="modal-content">
                           <div class="modal-header">
@@ -1256,7 +1256,7 @@
 
                     <!-- Modal -->
                     <div class="modal fade" id="productModal29" tabindex="-1" aria-labelledby="productModalLabel"
-                      aria-hidden="true">
+                      aria-hidden="false">
                       <div class="modal-dialog modal-dialog-centered modal-lg">
                         <div class="modal-content">
                           <div class="modal-header">
@@ -1325,7 +1325,7 @@
 
                     <!-- Modal -->
                     <div class="modal fade" id="exampleModal30" tabindex="-1" aria-labelledby="exampleModalLabel"
-                      aria-hidden="true">
+                      aria-hidden="false">
                       <div class="modal-dialog modal-dialog-centered modal-lg">
                         <div class="modal-content">
                           <div class="modal-header">
@@ -1393,7 +1393,7 @@
 
                     <!-- Modal -->
                     <div class="modal fade" id="exampleModal31" tabindex="-1" aria-labelledby="exampleModalLabel"
-                      aria-hidden="true">
+                      aria-hidden="false">
                       <div class="modal-dialog modal-dialog-centered modal-lg">
                         <div class="modal-content">
                           <div class="modal-header">
@@ -1462,7 +1462,7 @@
 
                     <!-- Modal -->
                     <div class="modal fade" id="exampleModal32" tabindex="-1" aria-labelledby="exampleModalLabel"
-                      aria-hidden="true">
+                      aria-hidden="false">
                       <div class="modal-dialog modal-dialog-centered modal-lg">
                         <div class="modal-content">
                           <div class="modal-header">
